--- a/Prototype/songs.html
+++ b/Prototype/songs.html
@@ -13,7 +13,7 @@
 				<h3><span id="capo">3rd Fret</span> • <span id="bpm">120 BPM</span></h3>
 			</hgroup>
 			<a href="#" id="back" title="back"><img src="img/back.svg"></a>
-			<a href="#" id="add" title="addEdit"><img src="img/edit.svg"></a>
+			<a href="#" id="addEdit"><img src="img/edit.svg"></a>
 		</header>
 		<main>
 <!--																		Song List -->
