Prototype: Responsive Song Sample
• Added sample @media queries to songs.html.
• Linked up all song pages.

--- a/Prototype/song_new_step1.html
+++ b/Prototype/song_new_step1.html
@@ -21,7 +21,7 @@
 			<input placeholder="Chords"></input>
 			<div><input placeholder="#"></input><span>&nbsp;BPM</span></div>
 
-			<a href="#" id="next"><img src="img/next.svg"></a>
+			<a href="song_new_step2.html" id="next"><img src="img/next.svg"></a>
 		</main>
 	</body>
 </html>
