--- a/Prototype/song_new_step2.html
+++ b/Prototype/song_new_step2.html
@@ -343,7 +343,7 @@
 				</ul>
 			</section>
 
-			<a href="#" id="complete"><img src="img/complete.svg"></a>
+			<a href="songs.html" id="complete"><img src="img/complete.svg"></a>
 		</main>
 	</body>
 </html>
