--- a/Prototype/songs.html
+++ b/Prototype/songs.html
@@ -13,13 +13,14 @@
 				<h3><span id="capo">3rd Fret</span> • <span id="bpm">120 BPM</span></h3>
 			</hgroup>
 			<a href="#" id="back" title="back"><img src="img/back.svg"></a>
-			<a href="#" id="addEdit"><img src="img/edit.svg"></a>
+			<a href="song_new_step1.html" id="addEdit"><img src="img/add.svg"></a>
 		</header>
 		<main>
 <!--																		Song List -->
 			<section id="songList">
 				<ul>
 					<li>
+						<img src="http://lorempixel.com/200/200/fashion/8">
 						<div class="songId">
 							<p>Song Title</p>
 							<p>Song Artist</p>
@@ -27,6 +28,7 @@
 						<img src="img/next.svg">
 					</li>
 					<li>
+						<img src="http://lorempixel.com/200/200/fashion/2">
 						<div class="songId">
 							<p>Song Title</p>
 							<p>Song Artist</p>
@@ -34,6 +36,7 @@
 						<img src="img/next.svg">
 					</li>
 					<li>
+						<img src="http://lorempixel.com/200/200/fashion/3">
 						<div class="songId">
 							<p>Song Title</p>
 							<p>Song Artist</p>
@@ -41,6 +44,31 @@
 						<img src="img/next.svg">
 					</li>
 					<li>
+						<img src="http://lorempixel.com/200/200/fashion/9">
+						<div class="songId">
+							<p>Song Title</p>
+							<p>Song Artist</p>
+						</div>
+						<img src="img/next.svg">
+					</li>
+					<li>
+						<img src="http://lorempixel.com/200/200/fashion/10">
+						<div class="songId">
+							<p>Song Title</p>
+							<p>Song Artist</p>
+						</div>
+						<img src="img/next.svg">
+					</li>
+					<li>
+						<img src="http://lorempixel.com/200/200/fashion/6">
+						<div class="songId">
+							<p>Song Title</p>
+							<p>Song Artist</p>
+						</div>
+						<img src="img/next.svg">
+					</li>
+					<li>
+						<img src="http://lorempixel.com/200/200/fashion/7">
 						<div class="songId">
 							<p>Song Title</p>
 							<p>Song Artist</p>
