--- a/Prototype/song_new_step2.html
+++ b/Prototype/song_new_step2.html
@@ -1,349 +1,176 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Guitar Practice</title>
-		<link rel="stylesheet" href="css/style.css" media="" charset="utf-8">
-	</head>
-	<body>
-		<header>
-			<hgroup>
-				<h1>New Song</h1>
-				<h2>Step 2</h2>
-			</hgroup>
-			<a href="#" id="back" title="back"><img src="img/back.svg"></a>
-			<span id="blank"></span>
-		</header>
-		<main id="newSong">
-			<section id="chords">
-				<section class="chordSection">
-					<h4 contenteditable>Verse<a href="#" id="addEdit"><img src="img/edit.svg"></a></h4>
-					<div class="barContainer">
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-							<li>
-								<select name="select">
-									<option selected>&nbsp;</option>
-									<option>A</option>
-									<option>Am</option>
-									<option>D</option>
-									<option>E</option>
-								</select>
-							</li>
-						</ul>
+<head>
+	<meta charset="utf-8">
+	<title>Guitar Practice</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<header>
+		<div>
+			<h1>New Song</h1>
+			<h2>Step 2</h2>
+			<h3>Enter Chords &amp; Strum Pattern</h3>
+		</div>
+		<a href="songs.html" id="back" title="back"><img src="img/back.svg" alt="Cancel"></a>
+		<div id="blank">&nbsp;</div>
+	</header>
+	<main id="newSong">
+		<section id="newSongBars">
+			<section class="newSongChords">
+				<h4>
+					Verse
+					<a href="#"  class="addEdit"><img src="img/edit.svg" alt="Edit section title"></a>
+				</h4>
+				<div class="newSongSection">
+					<div class="newBarGroup">
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
 					</div>
-				</section>
-				<section class="chordSection">
-					<h4>Add Section<a href="#" id="addEdit"><img src="img/add.svg"></a></h4>
-				</section>
+					<div class="newBarGroup">
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+					</div>
+					<div class="newBarGroup">
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+					</div>
+					<div class="newBarGroup">
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+						<select>
+							<option value="">&nbsp;</option>
+							<option value="A">A</option>
+							<option value="Am">Am</option>
+							<option value="D">D</option>
+							<option value="E">E</option>
+						</select>
+					</div>
+					<div class="newBarGroup">
+						New Bar <img src="img/add.svg" alt="Add New Bar">
+					</div>
+				</div>
 			</section>
-			<section id="strum">
-				<h4>Add Strum Pattern<a href="#" id="addEdit"><img src="img/add.svg"></a></h4>
-				<ul>
-					<!-- reference insight project for drop & snap-->
-					<li>
-						<img draggable src="img/strum_d.svg">
-						<img draggable src="img/strum_u.svg">
-						<img draggable src="img/strum_b.svg">
-						<img draggable src="img/strum_a.svg">
-						<img draggable src="img/strum_m.svg">
-					</li>
-				</ul>
+			<section class="newSongChords">
+				<h4>
+					Add Section
+					<a href="#" class="addEdit"><img src="img/add.svg" alt="Add a new section"></a>
+				</h4>
 			</section>
-
-			<a href="songs.html" id="complete"><img src="img/complete.svg"></a>
-		</main>
-	</body>
+		</section>
+		<section id="newSongStrum">
+			<h4>
+				Add Strum Pattern
+				<a href="#" class="addEdit"><img src="img/add.svg" alt="Add a new strum pattern"></a>
+			</h4>
+			<div id="dragStrum">
+				<img draggable src="img/strum_d.svg" alt="Down">
+				<img draggable src="img/strum_u.svg" alt="Up">
+				<img draggable src="img/strum_b.svg" alt="No Strum">
+				<img draggable src="img/strum_a.svg" alt="Accented">
+				<img draggable src="img/strum_m.svg" alt="Muted">
+			</div>
+			<div id="dragTarget">
+			</div>
+		</section>
+		<a href="songs.html" id="complete"><img src="img/complete.svg" alt="Save Song"></a>
+	</main>
+</body>
 </html>
