--- a/Prototype/songs.html
+++ b/Prototype/songs.html
@@ -3,77 +3,70 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Guitar Practice</title>
-		<link rel="stylesheet" href="css/style.css" media="" charset="utf-8">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header>
-			<hgroup>
+			<div>
 				<h1>Songs</h1>
 				<h2>Artist</h2>
 				<h3><span id="capo">3rd Fret</span> • <span id="bpm">120 BPM</span></h3>
-			</hgroup>
-			<a href="#" id="back" title="back"><img src="img/back.svg"></a>
-			<a href="song_new_step1.html" id="addEdit"><img src="img/add.svg"></a>
+			</div>
+			<a href="index.html" id="back" title="back"><img src="img/back.svg" alt="Back to features list"></a>
+			<a href="song_new_step1.html" id="addEdit"><img src="img/add.svg" alt="Add a new song"></a>
 		</header>
 		<main>
 <!--																		Song List -->
 			<section id="songList">
 				<ul>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/8">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/2">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/3">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/9">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/10">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/6">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 					<li>
-						<img src="http://lorempixel.com/200/200/fashion/7">
-						<div class="songId">
+						<div>
 							<p>Song Title</p>
 							<p>Song Artist</p>
 						</div>
-						<img src="img/next.svg">
+						<img src="img/next.svg" alt="View Song">
 					</li>
 				</ul>
 			</section>
@@ -180,59 +173,59 @@
 					<h4>Strum Pattern</h4>
 					<ul>
 						<li>
-							<img src="img/strum_d.svg">
+							<img src="img/strum_d.svg" alt="Down">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_b.svg">
+							<img src="img/strum_b.svg" alt="No Strum">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_d.svg">
-							<sub><img src="img/strum_m.svg"></sub>
+							<img src="img/strum_d.svg" alt="Down">
+							<sub><img src="img/strum_m.svg" alt="Muted"></sub>
 						</li>
 						<li>
-							<img src="img/strum_b.svg">
+							<img src="img/strum_b.svg" alt="No Strum">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_d.svg">
+							<img src="img/strum_d.svg" alt="Down">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_u.svg">
+							<img src="img/strum_u.svg" alt="Up">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_b.svg">
+							<img src="img/strum_b.svg" alt="No Strum">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_u.svg">
+							<img src="img/strum_u.svg" alt="Up">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_b.svg">
+							<img src="img/strum_b.svg" alt="No Strum">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_u.svg">
+							<img src="img/strum_u.svg" alt="Up">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_d.svg">
+							<img src="img/strum_d.svg" alt="Down">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_u.svg">
+							<img src="img/strum_u.svg" alt="Up">
 							<sub>&nbsp;</sub>
 						</li>
 						<li>
-							<img src="img/strum_d.svg">
-							<sub><img src="img/strum_a.svg"></sub>
+							<img src="img/strum_d.svg" alt="Down">
+							<sub><img src="img/strum_a.svg" alt="Accented"></sub>
 						</li>
 						<li>
-							<img src="img/strum_u.svg">
+							<img src="img/strum_u.svg" alt="Up">
 							<sub>&nbsp;</sub>
 						</li>
 					</ul>
