--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -3,22 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Guitar Practice</title>
-		<link rel="stylesheet" href="css/style.css" media="" charset="utf-8">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<main>
-			<section id="navChord" class="navLg">
-				<a href="chordChanges.html">
-					<span class="h2">1 Minute Chord Changes</span>
-					<img src="img/timer.png">
-				</a>
-			</section>
-			<section id="navSong" class="navLg">
-				<a href="songs.html">
-					<span class="h2">Songs</span>
-					<img src="img/songs.png">
-				</a>
-			</section>
+		<main id="homeNav">
+			<a href="chords.html">
+				<h1>1 Minute Chord Changes</h1>
+				<img src="img/timer.png" alt="Chord Changes">
+			</a>
+			<a href="songs.html">
+				<h1>Song List</h1>
+				<img src="img/songs.png" alt="Song List">
+			</a>
 		</main>
 	</body>
 </html>
